# STplayer

./: .gitignore  AUTO_SYNC_WORKING.md  BUILD_TEST.md  BUILD_VERIFICATION_GUIDE.md  CLOUD_ENVIRONMENT_CHECK.sh  COLLABORATION_GUIDE.md  CURSOR_NOTIFICATION.md  DECISION_LOG.md  DEPLOYMENT_READY.md  DEVELOPER_NOTES.md  DREAM_TEAM_REPORT.md  EvaluationReport.md  LINGMA_EVALUATION_REPORT.md  QUICK_COMMANDS.md  README.md  SHIHAB_CLOUD_CHECK.md  SHIHAB_EXECUTION_GUIDE.md  SHIHAB_STEPS.md  TESTING_WORKFLOW.md  TEST_AUTO_SYNC.md  auto_start.sh  auto_sync.sh  build.gradle.kts  cursor_auto_responder.sh  cursor_auto_sync.sh  git_sync.sh  git_sync_monitor.sh  gradle.properties  lingma_auto_response.sh  settings.gradle.kts  verify_setup.sh
app/: build.gradle.kts
app/src/androidTest/java/com/taazali/stplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README.md
app/src/main/assets/translation/: README.md
app/src/main/assets/whisper/: README.md
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/whispercpp/: whisper_jni.cpp
app/src/main/java/com/taazali/stplayer/: MainActivity.kt  SubtitleManager.kt  TranslationManager.kt  WhisperBridge.kt
app/src/main/java/com/taazali/stplayer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/taazali/stplayer/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
